# taskblaster

./: .gitignore  CHANGELOG.rst  README.rst  run.sh  setup.cfg  tox.ini  update_certs.py
certs/: collab.tacc.utexas.edu.pem
taskblaster/: __main__.py  cli.py  redmine.py  trello.py  util.py
taskblaster/commands/: sync.py
