[metadata]
name = taskblaster
version = attr: taskblaster.VERSION
description = Task synchronizer for (in)sanity
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = trello, redmine
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    py-trello
    python-redmine
