[metadata]
name = taskblaster
version = attr: taskblaster.VERSION
description = Task synchronizer for (in)sanity
long_description = file: README.rst
keywords = trello, redmine
license = MIT
classifiers =
    Programming Language :: Python :: 3

[options]
packages = find:
install_requires =
    click
    py-trello
    python-dateutil
    python-redmine
    tabulate
